# MutsukiLink

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml  performance.yml
artifacts/performance/: compact-data-macos-aarch64-smoke.json  mux-reference-v1-smoke.json  ntp-security-fallback-macos-aarch64-smoke.json  release-loopback-macos-aarch64-smoke.json
artifacts/performance/reference-windows-x64/: report.analysis.json  report.approval.json  report.json
crates/mutsuki-link/: Cargo.toml
crates/mutsuki-link-core/: Cargo.toml
crates/mutsuki-link-core/src/: budget.rs  control.rs  data.rs  error.rs  handshake.rs  identity.rs  lib.rs  liveness.rs  mux.rs  protocol.rs  realtime.rs  reconnect.rs  resume.rs  security.rs  selection.rs  session.rs  transport.rs
crates/mutsuki-link-core/tests/: phase1_acceptance.rs  phase4_acceptance.rs  phase5_acceptance.rs  phase6_release_acceptance.rs
crates/mutsuki-link-discovery/: Cargo.toml
crates/mutsuki-link-discovery/src/: lib.rs
crates/mutsuki-link-io/: Cargo.toml
crates/mutsuki-link-io/src/: lib.rs
crates/mutsuki-link-local/: Cargo.toml
crates/mutsuki-link-local/src/: app_endpoint.rs  lib.rs
crates/mutsuki-link-pairing/: Cargo.toml
crates/mutsuki-link-pairing/src/: ceremony.rs  file_store.rs  keyring_store.rs  lib.rs  rate_limit.rs  trust.rs
crates/mutsuki-link-pairing/tests/: phase3_acceptance.rs
crates/mutsuki-link-quic/: Cargo.toml
crates/mutsuki-link-quic/src/: lib.rs
crates/mutsuki-link-runtime/: Cargo.toml
crates/mutsuki-link-runtime/src/: config.rs  error.rs  events.rs  lib.rs  peer_session.rs  pool.rs
crates/mutsuki-link-runtime/tests/: pool_acceptance.rs
crates/mutsuki-link-tcp/: Cargo.toml
crates/mutsuki-link-tcp/src/: lib.rs
crates/mutsuki-link-transport-testkit/: Cargo.toml
crates/mutsuki-link-transport-testkit/src/: lib.rs
crates/mutsuki-link/examples/: compact_data_baseline.rs  discovery_pairing.rs  headless_pairing.rs  local_sidecar.rs  manual_server.rs  multiplex.rs  mux_baseline.rs  peer_echo.rs  performance_model_raw.rs  release_baseline.rs
crates/mutsuki-link/src/: lib.rs
crates/ntp-mutsuki-link/: Cargo.toml
crates/ntp-mutsuki-link/src/: auth.rs  control.rs  fragment.rs  lib.rs  reliable.rs
crates/ntp-mutsuki-link/tests/: remote_producer.rs
docs/: architecture.md  compact-data.md  compatibility.md  connection-resilience.md  core-contracts.md  crate-layout.md  discovery-pairing.md  ntp-remote-producer.md  performance-model.md  protocol-integration.md  release-checklist.md  runtime-pool.md  security-deployment.md  transports.md  typed-control.md
docs/reports/: issue-15-ntp-binding.json  issue-17-ntp-security-fallback.json
scripts/: check-boundaries.sh  run-performance-model.py
