[workspace]
resolver = "2"
members = [
    "crates/mutsuki-link",
    "crates/mutsuki-link-core",
    "crates/mutsuki-link-io",
    "crates/mutsuki-link-discovery",
    "crates/mutsuki-link-local",
    "crates/mutsuki-link-pairing",
    "crates/mutsuki-link-quic",
    "crates/mutsuki-link-runtime",
    "crates/mutsuki-link-tcp",
    "crates/mutsuki-link-transport-testkit",
    "crates/ntp-mutsuki-link",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
repository = "https://github.com/sena-nana/MutsukiLink"

[workspace.dependencies]
bytes = "1.11.1"
interprocess = { version = "2.4.2", default-features = false, features = ["tokio"] }
keyring = { version = "3.6.3", default-features = false }
mdns-sd = { version = "0.20.1", default-features = false }
nana-tracking-protocol = { version = "0.1.0", git = "https://github.com/sena-nana/NanaTracking.git", rev = "919f7f23c246c64c0ea36742a5813899903dadb4", default-features = false, features = ["std"] }
quinn = { version = "0.11.11", default-features = false, features = ["runtime-tokio", "rustls-ring"] }
rcgen = "0.13.2"
rustls = { version = "0.23.37", default-features = false, features = ["ring", "std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
socket2 = "0.6.5"
stats_alloc = "0.1.10"
tokio = { version = "1.52.3", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
