[package]
name = "mutsuki-link-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Opt-in peer candidate discovery providers for MutsukiLink"

[features]
default = []
mdns = ["dep:mdns-sd"]

[dependencies]
mdns-sd = { workspace = true, optional = true }
mutsuki-link-core = { path = "../mutsuki-link-core" }

[lints]
workspace = true
