[package]
name = "mutsuki-link-quic"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Opt-in authenticated encrypted QUIC transport for MutsukiLink"

[dependencies]
bytes.workspace = true
mutsuki-link-core = { version = "0.1.0", path = "../mutsuki-link-core" }
mutsuki-link-io = { version = "0.1.0", path = "../mutsuki-link-io" }
quinn.workspace = true
tokio.workspace = true

[dev-dependencies]
mutsuki-link-transport-testkit = { version = "0.1.0", path = "../mutsuki-link-transport-testkit" }
rcgen.workspace = true
rustls.workspace = true

[lints]
workspace = true
