[package]
name = "mutsuki-link-tcp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Opt-in TCP transport for MutsukiLink"

[dependencies]
mutsuki-link-core = { path = "../mutsuki-link-core" }
mutsuki-link-io = { path = "../mutsuki-link-io" }
socket2.workspace = true
tokio.workspace = true

[dev-dependencies]
mutsuki-link-transport-testkit = { path = "../mutsuki-link-transport-testkit" }

[lints]
workspace = true
