[package]
name = "mutsuki-link-transport-testkit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal shared acceptance suite for MutsukiLink transports"
publish = false

[dependencies]
mutsuki-link-core = { version = "0.1.0", path = "../mutsuki-link-core" }
tokio.workspace = true

[lints]
workspace = true
