[package]
name = "mutsuki-link"
description = "Minimal feature-gated facade for the MutsukiLink connection runtime"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
discovery = ["dep:mutsuki-link-discovery"]
local = ["dep:mutsuki-link-local", "dep:tokio"]
mdns = ["discovery", "mutsuki-link-discovery/mdns"]
pairing = ["dep:mutsuki-link-pairing"]
quic = ["dep:mutsuki-link-quic"]
tcp = ["dep:mutsuki-link-tcp"]
system-keyring = ["pairing", "mutsuki-link-pairing/system-keyring"]

[dependencies]
mutsuki-link-core = { version = "0.1.0", path = "../mutsuki-link-core" }
mutsuki-link-discovery = { version = "0.1.0", path = "../mutsuki-link-discovery", optional = true }
mutsuki-link-local = { version = "0.1.0", path = "../mutsuki-link-local", optional = true }
mutsuki-link-pairing = { version = "0.1.0", path = "../mutsuki-link-pairing", optional = true }
mutsuki-link-quic = { version = "0.1.0", path = "../mutsuki-link-quic", optional = true }
mutsuki-link-tcp = { version = "0.1.0", path = "../mutsuki-link-tcp", optional = true }
tokio = { workspace = true, optional = true }

[dev-dependencies]
quinn.workspace = true
rcgen.workspace = true
rustls.workspace = true
serde.workspace = true
serde_json.workspace = true
stats_alloc.workspace = true

[[example]]
name = "manual_server"
required-features = ["local"]

[[example]]
name = "headless_pairing"
required-features = ["pairing"]

[[example]]
name = "discovery_pairing"
required-features = ["discovery", "pairing"]

[[example]]
name = "local_sidecar"
required-features = ["local"]

[[example]]
name = "multiplex"

[[example]]
name = "release_baseline"
required-features = ["local", "tcp", "quic"]

[[example]]
name = "mux_baseline"

[[example]]
name = "performance_model_raw"

[lints]
workspace = true
